--- a/tp1/index.html
+++ b/tp1/index.html
@@ -5,7 +5,7 @@
     <title>CGFexample</title>    
     <link rel="icon" href="data:,">
 
-<style>
+<style>https://git.fe.up.pt/cg/cg-2022-2023/t01/cg-t01-g01.git
 body, html {
     border: 0;
     padding: 0;
